# Milkyway

./: .gitignore  Atmosphere.cpp  Atmosphere.h  CMakeLists.txt  DSLODOptixRenderer.cc  DSLODOptixRenderer.h  LICENSE  OptixApp.cc  OptixApp.h  Planet.cc  Planet.h  README.md  RTCamera.cpp  RTCamera.h  TextureRenderer.cpp  TextureRenderer.h  Utilities.cpp  Utilities.h  main.cpp  test_graph.json
CUDA_PROGRAMS/: anyhit.cu  app_config.h  atmosphere.cu  atmosphere_anyhit.cu  boundingbox_triangle_indexed.cu  exception.cu  generated_cuda.h  intersection_triangle_indexed.cu  medium.h  miss.cu  ngen.cu  payloads.h  planet.cu  raygen.cu  triangle_attributes.cu  util.h
GL/: glcorearb.h
imgui/: imgui_impl_opengl3.cpp
